--- a/app/src/main/res/layout/activity_login_phone.xml
+++ b/app/src/main/res/layout/activity_login_phone.xml
@@ -1,11 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.LoginPhoneActivity">
+    android:orientation="vertical">
 
     <include layout="@layout/tool_bar"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_margin="@dimen/activity_margin">
+
+        <EditText
+            android:id="@+id/et_phone"
+            android:hint="@string/enter_phone_number"
+            style="@style/EditText"
+            android:inputType="phone"
+            android:minEms="11"
+            android:maxLength="11"
+            android:maxEms="11"/>
+
+        <EditText
+            android:id="@+id/et_password"
+            android:hint="@string/hint_password"
+            style="@style/EditText"
+            android:minEms="6"
+            android:inputType="textPassword"/>
+
+        <Button
+            android:id="@+id/bt_register"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:background="@drawable/selector_button_reverse"
+            android:textColor="@drawable/selector_text_reverse"
+            android:text="@string/login"/>
+
+    </LinearLayout>
+
+
+</LinearLayout>
