--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,218 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:fitsSystemWindows="true"
+    tools:openDrawer="start">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <include
+        layout="@layout/app_bar_home"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="@color/white"
+        android:fitsSystemWindows="true"
+        android:orientation="vertical">
+
+        <include layout="@layout/user_info" />
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:scrollbars="none">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <LinearLayout style="@style/ItemContainer">
+
+                    <ImageView
+                        style="@style/ItemIcon"
+                        android:src="@drawable/ic_phone" />
+
+                    <TextView
+                        style="@style/ItemText"
+                        android:text="我的消息" />
+                </LinearLayout>
+
+                <LinearLayout style="@style/ItemContainer">
+
+                    <ImageView
+                        style="@style/ItemIcon"
+                        android:src="@drawable/ic_phone" />
+
+                    <TextView
+                        style="@style/ItemText"
+                        android:text="我的消息" />
+                </LinearLayout>
+
+                <LinearLayout style="@style/ItemContainer">
+
+                    <ImageView
+                        style="@style/ItemIcon"
+                        android:src="@drawable/ic_phone" />
+
+                    <TextView
+                        style="@style/ItemText"
+                        android:text="我的消息" />
+                </LinearLayout>
+
+                <LinearLayout style="@style/ItemContainer">
+
+                    <ImageView
+                        style="@style/ItemIcon"
+                        android:src="@drawable/ic_phone" />
+
+                    <TextView
+                        style="@style/ItemText"
+                        android:text="我的消息" />
+                </LinearLayout>
+
+                <include layout="@layout/divider_large" />
+
+
+                <LinearLayout style="@style/ItemContainer">
+
+                    <ImageView
+                        style="@style/ItemIcon"
+                        android:src="@drawable/ic_phone" />
+
+                    <TextView
+                        style="@style/ItemText"
+                        android:text="我的消息" />
+                </LinearLayout>
+
+                <LinearLayout style="@style/ItemContainer">
+
+                    <ImageView
+                        style="@style/ItemIcon"
+                        android:src="@drawable/ic_phone" />
+
+                    <TextView
+                        style="@style/ItemText"
+                        android:text="我的消息" />
+                </LinearLayout>
+
+                <include layout="@layout/divider_large" />
+
+
+                <LinearLayout style="@style/ItemContainer">
+
+                    <ImageView
+                        style="@style/ItemIcon"
+                        android:src="@drawable/ic_phone" />
+
+                    <TextView
+                        style="@style/ItemText"
+                        android:text="我的消息" />
+                </LinearLayout>
+
+                <LinearLayout style="@style/ItemContainer">
+
+                    <ImageView
+                        style="@style/ItemIcon"
+                        android:src="@drawable/ic_phone" />
+
+                    <TextView
+                        style="@style/ItemText"
+                        android:text="我的消息" />
+                </LinearLayout>
+
+                <LinearLayout style="@style/ItemContainer">
+
+                    <ImageView
+                        style="@style/ItemIcon"
+                        android:src="@drawable/ic_phone" />
+
+                    <TextView
+                        style="@style/ItemText"
+                        android:text="我的消息" />
+                </LinearLayout>
+
+                <LinearLayout style="@style/ItemContainer">
+
+                    <ImageView
+                        style="@style/ItemIcon"
+                        android:src="@drawable/ic_phone" />
+
+                    <TextView
+                        style="@style/ItemText"
+                        android:text="我的消息" />
+                </LinearLayout>
+
+                <LinearLayout style="@style/ItemContainer">
+
+                    <ImageView
+                        style="@style/ItemIcon"
+                        android:src="@drawable/ic_phone" />
+
+                    <TextView
+                        style="@style/ItemText"
+                        android:text="我的消息" />
+                </LinearLayout>
+
+
+            </LinearLayout>
+
+        </ScrollView>
+
+        <include layout="@layout/divider_small" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/slide_bottom_height"
+            android:layout_marginHorizontal="@dimen/activity_margin"
+            android:orientation="horizontal">
+
+            <LinearLayout style="@style/ItemContainerLarge">
+
+                <ImageView
+                    style="@style/ItemIcon"
+                    android:src="@drawable/ic_phone" />
+
+                <TextView
+                    style="@style/ItemTextLarge"
+                    android:text="夜间模式" />
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:id="@+id/ll_settings"
+                style="@style/ItemContainerLarge">
+
+                <ImageView
+                    style="@style/ItemIcon"
+                    android:src="@drawable/ic_phone" />
+
+                <TextView
+                    style="@style/ItemTextLarge"
+                    android:text="设置" />
+            </LinearLayout>
+
+            <LinearLayout style="@style/ItemContainerLarge">
+
+                <ImageView
+                    style="@style/ItemIcon"
+                    android:src="@drawable/ic_phone" />
+
+                <TextView
+                    style="@style/ItemTextLarge"
+                    android:text="退出" />
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+
+</androidx.drawerlayout.widget.DrawerLayout>
