--- a/app/src/main/res/layout/item_song.xml
+++ b/app/src/main/res/layout/item_song.xml
@@ -22,7 +22,7 @@
             app:cardElevation="0dp">
 
             <ImageView
-                android:id="@+id/iv_icon"
+                android:id="@+id/iv_banner"
                 android:layout_width="90dp"
                 android:layout_height="90dp"
                 android:scaleType="centerCrop"
