--- a/app/src/main/res/layout/header_song_detail.xml
+++ b/app/src/main/res/layout/header_song_detail.xml
@@ -180,7 +180,9 @@
             android:layout_width="wrap_content"
             android:layout_height="35dp"
             android:layout_margin="@dimen/activity_margin"
-            android:background="@null" />
+            android:text="@string/collection_all"
+            android:background="@drawable/selector_button_reverse"
+            android:textColor="@drawable/selector_text_reverse"/>
 
     </LinearLayout>
 
