--- a/app/src/main/res/layout/activity_music_player.xml
+++ b/app/src/main/res/layout/activity_music_player.xml
@@ -51,7 +51,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical"
-                    android:visibility="gone">
+                    android:visibility="gone"
+                    android:clickable="true">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -74,21 +75,18 @@
 
                     </LinearLayout>
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="歌词显示"/>
+                    <com.example.muiscdemo.view.ListLyricView
+                        android:id="@+id/lv"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
 
-                    <!--<com.ixuea.courses.mymusic.view.ListLyricView-->
-                        <!--android:id="@+id/lv"-->
-                        <!--android:layout_width="match_parent"-->
-                        <!--android:layout_height="match_parent" />-->
                 </LinearLayout>
 
                 <RelativeLayout
                     android:id="@+id/rl_player_container"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:clickable="true">
 
                     <com.example.muiscdemo.view.RecordBackgroundView
                         android:layout_width="match_parent"
@@ -101,9 +99,9 @@
 
                     <androidx.viewpager.widget.ViewPager
                         android:id="@+id/vp"
-                        android:visibility="gone"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent" />
+                        android:layout_height="match_parent"
+                        android:visibility="gone" />
 
                     <com.example.muiscdemo.view.RecordThumbView
                         android:id="@+id/rt"
