--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -15,4 +15,6 @@
         android:layout_height="0dp"
         android:layout_weight="1"/>
 
+    <include layout="@layout/item_play_small_controller" />
+
 </LinearLayout>
