--- a/app/src/main/res/layout/item_play_small_controller.xml
+++ b/app/src/main/res/layout/item_play_small_controller.xml
@@ -57,7 +57,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/item_icon_padding"
-                android:textColor="@color/text"
+                android:textColor="@color/main_color"
                 tools:text="这是歌曲名称"/>
         </LinearLayout>
 
